components/SideNavigation/src/index.scss
.denhaag-side-navigation {
  display: var(--denhaag-side-navigation-display);
  flex-direction: var(--denhaag-side-navigation-flex-direction);
  row-gap: var(--denhaag-side-navigation-row-gap);
  min-width: var(--denhaag-side-navigation-min-width);

  @media (width <= 1023px) {
    display: var(--denhaag-side-navigation-mobile-display);
  }
}

.denhaag-side-navigation__list {
  list-style: none;
  margin-block-end: 0;
  margin-block-start: 0;
  padding-block-end: 0;
  padding-block-start: 0;
  padding-inline-start: 0;
}

.denhaag-side-navigation__item {
  font-family: var(--denhaag-side-navigation-item-font-family, sans-serif);
  font-size: var(--denhaag-side-navigation-item-font-size);
  font-weight: var(--denhaag-side-navigation-item-font-weight, normal);
  line-height: 1.5;
  display: flex;
  flex-direction: row;
  align-items: center;

  &:has(> .denhaag-side-navigation__list) {
    flex-wrap: wrap;
  }

  & > .denhaag-side-navigation__list {
    flex-basis: 100%;
    margin-inline-start: var(--denhaag-side-navigation-list-margin-inline-start);
  }
}

.denhaag-side-navigation__link {
  text-decoration: none;
  color: var(--denhaag-side-navigation-link-color);
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  align-items: center;
  column-gap: 16px;
  padding-block-start: var(--denhaag-side-navigation-link-padding-block-start);
  padding-block-end: var(--denhaag-side-navigation-link-padding-block-end);
}

.denhaag-side-navigation__link-label {
  display: flex;
  gap: var(--denhaag-side-navigation-link-label-gap);
  align-items: center;
}

.denhaag-side-navigation__link:hover,
.denhaag-side-navigation__link--hover {
  color: var(--denhaag-side-navigation-link-hover-color);
  cursor: pointer;
}

.denhaag-side-navigation__link:focus-visible,
.denhaag-side-navigation__link--focus {
  outline: var(--denhaag-focus-border);
}

.denhaag-side-navigation__link--current {
  color: var(--denhaag-side-navigation-link-active-color);
  font-weight: var(--denhaag-side-navigation-link-active-font-weight);
}

.denhaag-side-navigation__expand-button {
  inline-size: var(--denhaag-side-navigation-expand-button-inline-size);
  block-size: var(--denhaag-side-navigation-expand-button-inline-size);
  display: inline-flex;
  justify-content: center;
  align-items: center;
  transform: var(--denhaag-side-navigation-expand-button-transform, rotate(0deg));
  transition: var(--denhaag-side-navigation-expand-button-transition, transform 200ms ease-in-out);

  @media (prefers-reduced-motion) {
    transition: none;
  }
}

.denhaag-side-navigation__expand-button[aria-expanded="true"],
.denhaag-side-navigation__expand-button--expanded {
  transform: var(--denhaag-side-navigation-expand-button-expanded-transform, rotate(180deg));
}

.denhaag-side-navigation__expand-separator {
  display: inline-block;
  color: var(--denhaag-side-navigation-expand-separator-color);
  background-color: currentColor;
  inline-size: var(--denhaag-side-navigation-expand-separator-inline-size);
  padding-block-end: var(--denhaag-side-navigation-expand-separator-padding-block-end);
  padding-block-start: var(--denhaag-side-navigation-expand-separator-padding-block-start);
  margin-inline-end: var(--denhaag-side-navigation-expand-separator-margin-block-end);
  margin-inline-start: var(--denhaag-side-navigation-expand-separator-margin-block-start);
}

